# solana-nft-collaterized-loans

./: .gitignore  Anchor.toml  package.json
app/solana-nft-collaterized-loans/: README.md  next.config.js  package.json
app/solana-nft-collaterized-loans/components/: Header.tsx  NFTImage.tsx
app/solana-nft-collaterized-loans/idl/: solana_nft_collaterized_loans.json
app/solana-nft-collaterized-loans/pages/: _app.tsx  _document.tsx  index.tsx
app/solana-nft-collaterized-loans/services/: service.ts
app/solana-nft-collaterized-loans/src/Models/: Config.ts  Order.ts
app/solana-nft-collaterized-loans/styles/: globals.css
app/solana-nft-collaterized-loans/utils/: consts.ts  solanaHelper.ts  usePrograms.ts
migrations/: deploy.ts
programs/solana-nft-collaterized-loans/: Cargo.toml
programs/solana-nft-collaterized-loans/src/: lib.rs
tests/: solana-nft-collaterized-loans.ts  utils.ts
tests/keys/: alice.json  bob.json  keyinfo.md  stablecoin.json
